# roberts-rtech

./: .gitmodules  mymap.pgm
dump/US_sens/: US_sens.ino
src/beginner_tutorials/: CMakeLists.txt  CMakeLists.txt.save  package.xml
src/beginner_tutorials/launch/: trysom.launch
src/beginner_tutorials/src/: divider.cpp  listener.cpp  talker.cpp
src/deneb/: CMakeLists.txt  counter.cpp  package.xml
src/deneb/msg/: angles.msg
src/deneb/src/: counter.cpp
src/dual_manipulator_moveit_config/: .setup_assistant  package.xml
src/dual_manipulator_moveit_config/config/: dual_manipulator.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
src/dual_manipulator_moveit_config/launch/: move_group.launch  moveit.rviz  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
src/dual_manipulator_support/: CMakeLists.txt  package.xml
src/dual_manipulator_support/urdf/: dual_man.urdf  dual_man.xacro  dual_man_2.urdf  dual_man_2.xacro  dual_man_macro.xacro
src/dual_sia5d_moveit_config/: .setup_assistant  package.xml
src/dual_sia5d_moveit_config/config/: dual_manipulator.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
src/dual_sia5d_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  (+7 more)
src/messaging/: CMakeLists.txt  package.xml
src/molecule/: CMakeLists.txt  package.xml
src/molecule/launch/: molecule.launch
src/molecule/src/: molecule.cpp  preper.cpp
src/motoman_sia5d_moveit_config/: .setup_assistant  package.xml
src/my_r2d2/: origins.urdf
src/my_usb_cam/: CMakeLists.txt  package.xml
src/planning_tutorial/: CMakeLists.txt  package.xml
src/planning_tutorials/: CMakeLists.txt  package.xml
src/trytry/: CMakeLists.txt  package.xml
(+27 files in other folders)
